--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,23 @@
+
+body {
+	width: 90% !important;
+	margin: 0 auto	!important;
+
+}
+
+html{
+	width: 100%;
+}
+
 body, html {
 	font-family: 'Open Sans', sans-serif;
 	text-rendering: optimizeLegibility !important;
 	-webkit-font-smoothing: antialiased !important;
 	color: #777;
 	font-weight: 400;
-	
-	width: 100% !important;	
 	height: 100% !important;
 }
+
 h2, h3, h4 {
 	font-family: 'Raleway', sans-serif;
 }
@@ -53,8 +63,8 @@ ul, ol {
 }
 ul, ol {
 	padding: 0;
-	webkit-padding: 0;
-	moz-padding: 0;
+	width: 30pc;
+	text-align: justify;
 }
 hr {
 	height: 2px;
@@ -184,7 +194,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 }
 /* Header Section */
 .intro {
-	display: table;
+	
 	width: 100%;
 	padding: 0;
 	background: url(../img/intro-bg.jpg) center center no-repeat;
@@ -200,9 +210,8 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 .intro h1 {
 	font-family: 'Raleway', sans-serif;
 	color: #fff;
-	font-size: 82px;
-	font-weight: 700;
-	text-transform: uppercase;
+	font-size: 65px;
+	font-weight: 600;
 	margin-top: 0;
 	margin-bottom: 10px;
 }
@@ -286,6 +295,7 @@ header .intro-text {
 #about p {
 	line-height: 24px;
 	margin: 30px 0;
+	text-align: justify;
 }
 /* Services Section */
 #services {
@@ -329,6 +339,10 @@ header .intro-text {
 }
 #services .service-desc {
 	margin-bottom: 40px;
+}
+#services .container ,#industries .container
+{
+	width: 100%;
 }
 /* Industries Section */
 #industries {
@@ -374,6 +388,8 @@ header .intro-text {
 #industries .service-desc {
 	margin-bottom: 40px;
 }
+
+
 /* Portfolio Section */
 #portfolio {
 	padding: 100px 0;
