--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,8 @@ body {
 	width: 90% !important;
 	margin: 0 auto	!important;
 
+	
+
 }
 
 html{
@@ -61,7 +63,14 @@ a:hover, a:focus {
 ul, ol {
 	list-style: none;
 }
-ul, ol {
+ul
+{
+	padding: 0;
+	width: 30pc;
+	text-align: justify;
+} 
+
+ol {
 	padding: 0;
 	width: 30pc;
 	text-align: justify;
@@ -249,6 +258,22 @@ header .intro-text {
 	background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
 	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
 }
+
+.button {
+	background-color: #904caf; /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	text-transform: uppercase;
+  }
+  .button:hover
+  {
+	  background-color: blue;
+  }
 /* About Section */
 #about {
 	padding: 100px 0;
@@ -344,6 +369,7 @@ header .intro-text {
 {
 	width: 100%;
 }
+
 /* Industries Section */
 #industries {
 	padding: 100px 0;
@@ -374,7 +400,7 @@ header .intro-text {
 	padding: 40px 0;
 	background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
 	border-radius: 50%;
-	color: #fff;
+	color: rgb(128, 90, 90);
 	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
 }
 #industries h3 {
