--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2111,7 +2111,10 @@ pre code {
     width: 58.33333333%;
   }
   .col-lg-6 {
-    width: 50%;
+    width: 100%;
+    line-height: 24px;
+    margin: 30px -3pc;
+    text-align: justify;
   }
   .col-lg-5 {
     width: 41.66666667%;
@@ -4485,7 +4488,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar-right {
     float: right !important;
     display: flex;
-    margin-right: 11pc;
+    margin-right: -17pc;
   }
   .navbar-right ~ .navbar-right {
     margin-right: 0;
