--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,8 @@
 
 body {
-	width: 90% !important;
+	width: 100% !important;
 	margin: 0 auto	!important;
-	
-	
-
+	padding: 0 ;
 }
 
 html{
@@ -63,7 +61,12 @@ a:hover, a:focus {
 ul, ol {
 	list-style: none;
 }
- 
+ul
+{
+	padding: 0;
+	width: 30pc;
+	text-align: center;
+} 
 
 ol {
 	padding: 0;
@@ -83,7 +86,6 @@ hr {
 #menu {
 	padding: 15px;
 	transition: all 0.8s;
-	
 }
 #menu.navbar-default {
 	background-color: #fff;
@@ -181,9 +183,6 @@ hr {
 	border-radius: 25px;
 	transition: all 0.5s linear;
 	border: 0;
-	
-
-	
 }
 .btn-custom:hover, .btn-custom:focus, .btn-custom.focus, .btn-custom:active, .btn-custom.active {
 	color: #fff;
@@ -289,7 +288,7 @@ header .intro-text {
 #about h2::after {
 	position: absolute;
 	content: "";
-	background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+	background: linear-gradient(to right, #5c874d 0%, #a2c43c 100%);
 	height: 4px;
 	width: 60px;
 	bottom: 0;
@@ -300,6 +299,8 @@ header .intro-text {
 	margin-left: 6px;
 	list-style: none;
 	padding: 0;
+	text-align: justify;
+
 }
 #about .about-text li:before {
 	content: '\f00c';
@@ -324,7 +325,8 @@ header .intro-text {
 /* Services Section */
 #services {
 	padding: 100px 0;
-	background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+	/* background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%); */
+	background: linear-gradient(to right, #194c50 0%, #0e6585 100%);
 	color: #fff;
 }
 #services .service-desc {
@@ -348,7 +350,7 @@ header .intro-text {
 	width: 120px;
 	height: 120px;
 	padding: 40px 0;
-	background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+	background: linear-gradient(to right, #5c874d 0%, #a2c43c 100%);
 	border-radius: 50%;
 	color: #fff;
 	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
@@ -373,8 +375,11 @@ header .intro-text {
 #industries {
 	padding: 100px 0;
 	/* background: linear-gradient(to right, #6c6cee 0%, #5ca9fb 100%); */
-	background-color: #444;
 	color: #fff;
+	background-color: #5c874d;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%235c874d'/%3E%3Cstop offset='1' stop-color='%230e6585'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%23a2c43c' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23a2c43c' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%23a2c43c' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23a2c43c' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
+	background-attachment: fixed;
+	background-size: cover;
 }
 #industries .service-desc {
 	margin: 10px 10px 20px;
@@ -397,7 +402,7 @@ header .intro-text {
 	width: 120px;
 	height: 120px;
 	padding: 40px 0;
-	background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+	background: #ffffff;
 	border-radius: 50%;
 	color: rgb(128, 90, 90);
 	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
@@ -520,7 +525,7 @@ header .intro-text {
 /* Contact Section */
 #contact {
 	padding: 100px 0 60px;
-	background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+	background: #0e6585;
 	color: rgba(255,255,255,.75);
 }
 #contact .section-title {
@@ -624,25 +629,23 @@ color: #777;
 	padding-top: 50px;
 	margin-top: 50px;
 	text-align: center;
+	display: flex;
+  	justify-content: center;
+  	align-items: center;
 }
 #contact .social ul li {
 	display: inline-block;
 	margin: 0 20px;
 }
 #contact .social i.fa {
-	font-size: 22px;
+	font-size: 24px;
 	width: 48px;
 	height: 48px;
 	padding: 12px 0;
-	border: 2px solid #fff;
+	/* border: 2px solid #fff; */
 	color: #fff;
 	border-radius: 50%;
 	transition: all 0.3s;
-
-	
-	
-	
- 
 }
 #contact .social i.fa:hover {
 	color: #608dfd;
@@ -650,7 +653,7 @@ color: #777;
 }
 /* Footer Section*/
 #footer {
-	background: #f6f6f6;
+	background: #ffffff;
 	padding: 30px 0;
 }
 #footer p {
