--- a/public/css/style.css
+++ b/public/css/style.css
@@ -552,13 +552,18 @@ header .intro-text {
 #contact h3 {
 	color: #fff;
 	margin-top: 80px;
-	margin-bottom: 25px;
-	padding-bottom: 20px;
+	/* margin-bottom: 25px; */
+	/* padding-bottom: 20px; */
 	font-weight: 400;
 }
 #contact form {
-	padding-top: 20px;
+	/* padding-top: 20px; */
 }
+
+.pInContactInfo {
+	margin-left: 20px;
+}
+
 #contact .text-danger {
 	color: #cc0033;
 	text-align: left;
