--- a/public/css/style.css
+++ b/public/css/style.css
@@ -407,12 +407,9 @@ header .intro-text {
 	color: rgb(128, 90, 90);
 	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
 }
-.col-md-4 div{
-	transition:top 3s;
-    top: 0px;
-}
-.col-md-4:hover {
+#moveUp:hover {
 	top:10px;
+	transition-delay: 5s;
   }
 #industries h3 {
 	font-weight: 500;
