--- a/public/css/style.css
+++ b/public/css/style.css
@@ -408,7 +408,7 @@ header .intro-text {
 	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
 }
 #moveUp:hover {
-	top:10px;
+	bottom:10px;
 	transition-delay: 5s;
   }
 #industries h3 {
@@ -533,7 +533,7 @@ header .intro-text {
 	color: rgba(255,255,255,.75);
 }
 #contact .section-title {
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 }
 #contact .section-title p {
 	font-size: 16px;
@@ -597,7 +597,7 @@ label {
 	background-color: #fff;
 	background-image: none;
 	border: 1px solid #ddd;
-	border-radius: 0;
+	border-radius: 2;
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	-webkit-transition: none;
@@ -609,6 +609,18 @@ label {
 	outline: 0;
 	-webkit-box-shadow: transparent;
 	box-shadow: transparent;
+}
+.form-control{
+	font-family: inherit;
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid;
+  outline: 0;
+  font-size: 1.3rem;
+  color: "$white";
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
 }
 .form-control::-webkit-input-placeholder {
 color: #777;
