--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
+@import "react-slideshow-image/dist/styles.css";
 
 body {
-	width: 100% !important;
+	width: 98% !important;
 	margin: 0 auto	!important;
 	padding: 0 ;
 }
@@ -147,9 +148,9 @@ hr {
 .navbar-default .navbar-toggle:hover>.icon-bar {
 	background-color: #608dfd;
 }
-.section-title {
+/* .section-title {
 	margin-bottom: 70px;
-}
+} */
 .section-title h2 {
 	position: relative;
 	margin-top: 10px;
@@ -275,6 +276,11 @@ header .intro-text {
 /* About Section */
 #about {
 	padding: 100px 0;
+	background-color: #ffffff;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='800' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='88' y1='88' x2='0' y2='0'%3E%3Cstop offset='0' stop-color='%230b2228'/%3E%3Cstop offset='1' stop-color='%2311363f'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='75' y1='76' x2='168' y2='160'%3E%3Cstop offset='0' stop-color='%238f8f8f'/%3E%3Cstop offset='0.09' stop-color='%23b3b3b3'/%3E%3Cstop offset='0.18' stop-color='%23c9c9c9'/%3E%3Cstop offset='0.31' stop-color='%23dbdbdb'/%3E%3Cstop offset='0.44' stop-color='%23e8e8e8'/%3E%3Cstop offset='0.59' stop-color='%23f2f2f2'/%3E%3Cstop offset='0.75' stop-color='%23fafafa'/%3E%3Cstop offset='1' stop-color='%23FFFFFF'/%3E%3C/linearGradient%3E%3Cfilter id='c' x='0' y='0' width='200%25' height='200%25'%3E%3CfeGaussianBlur in='SourceGraphic' stdDeviation='12' /%3E%3C/filter%3E%3C/defs%3E%3Cpolygon fill='url(%23a)' points='0 174 0 0 174 0'/%3E%3Cpath fill='%23000' fill-opacity='.5' filter='url(%23c)' d='M121.8 174C59.2 153.1 0 174 0 174s63.5-73.8 87-94c24.4-20.9 87-80 87-80S107.9 104.4 121.8 174z'/%3E%3Cpath fill='url(%23b)' d='M142.7 142.7C59.2 142.7 0 174 0 174s42-66.3 74.9-99.3S174 0 174 0S142.7 62.6 142.7 142.7z'/%3E%3C/svg%3E");
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-position: top left;
 }
 #about h3 {
 	font-size: 22px;
@@ -376,10 +382,7 @@ header .intro-text {
 	padding: 100px 0;
 	/* background: linear-gradient(to right, #6c6cee 0%, #5ca9fb 100%); */
 	color: #fff;
-	background-color: #5c874d;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%235c874d'/%3E%3Cstop offset='1' stop-color='%230e6585'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%23a2c43c' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23a2c43c' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%23a2c43c' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23a2c43c' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
-	background-attachment: fixed;
-	background-size: cover;
+	background-color: #133d47;
 }
 #industries .service-desc {
 	margin: 10px 10px 20px;
@@ -398,18 +401,17 @@ header .intro-text {
 	left: 50%;
 }
 #industries i.fa {
-	font-size: 42px;
+	font-size: 50px;
 	width: 120px;
 	height: 120px;
-	padding: 40px 0;
-	background: #ffffff;
+	padding: 50px 0;
 	border-radius: 50%;
-	color: rgb(128, 90, 90);
-	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
+	color: #ffffff;
+	/* box-shadow: 10px 10px 10px rgba(0,0,0,.05); */
 }
 #moveUp:hover {
-	bottom:10px;
-	transition-delay: 5s;
+	bottom:30px;
+	transition-delay: 10s !important;
   }
 #industries h3 {
 	font-weight: 500;
@@ -688,7 +690,7 @@ color: #777;
 	border-bottom: 2px solid #608dfd;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1100px) {
 #about img {
 	margin: 50px 0;
 }
