--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,7 +64,7 @@ ul, ol {
 }
 ul
 {
-	/* padding: 0; */
+	padding: 0;
 	width: 30pc;
 	text-align: center;
 } 
@@ -153,8 +153,8 @@ hr {
 } */
 .section-title h2 {
 	position: relative;
-	margin-top: 10px;
-	margin-bottom: 15px;
+	margin-top: 0px;
+	margin-bottom: 25px;
 	padding-bottom: 15px;
 }
 .section-title h2::after {
@@ -275,21 +275,21 @@ header .intro-text {
   }
 /* About Section */
 #about {
-	padding: 100px 0;
 	background-color: #ffffff;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='800' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='88' y1='88' x2='0' y2='0'%3E%3Cstop offset='0' stop-color='%230b2228'/%3E%3Cstop offset='1' stop-color='%2311363f'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='75' y1='76' x2='168' y2='160'%3E%3Cstop offset='0' stop-color='%238f8f8f'/%3E%3Cstop offset='0.09' stop-color='%23b3b3b3'/%3E%3Cstop offset='0.18' stop-color='%23c9c9c9'/%3E%3Cstop offset='0.31' stop-color='%23dbdbdb'/%3E%3Cstop offset='0.44' stop-color='%23e8e8e8'/%3E%3Cstop offset='0.59' stop-color='%23f2f2f2'/%3E%3Cstop offset='0.75' stop-color='%23fafafa'/%3E%3Cstop offset='1' stop-color='%23FFFFFF'/%3E%3C/linearGradient%3E%3Cfilter id='c' x='0' y='0' width='200%25' height='200%25'%3E%3CfeGaussianBlur in='SourceGraphic' stdDeviation='12' /%3E%3C/filter%3E%3C/defs%3E%3Cpolygon fill='url(%23a)' points='0 174 0 0 174 0'/%3E%3Cpath fill='%23000' fill-opacity='.5' filter='url(%23c)' d='M121.8 174C59.2 153.1 0 174 0 174s63.5-73.8 87-94c24.4-20.9 87-80 87-80S107.9 104.4 121.8 174z'/%3E%3Cpath fill='url(%23b)' d='M142.7 142.7C59.2 142.7 0 174 0 174s42-66.3 74.9-99.3S174 0 174 0S142.7 62.6 142.7 142.7z'/%3E%3C/svg%3E");
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='800' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='88' y1='88' x2='0' y2='0'%3E%3Cstop offset='0' stop-color='%234e5f27'/%3E%3Cstop offset='1' stop-color='%237d963d'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='75' y1='76' x2='168' y2='160'%3E%3Cstop offset='0' stop-color='%238f8f8f'/%3E%3Cstop offset='0.09' stop-color='%23b3b3b3'/%3E%3Cstop offset='0.18' stop-color='%23c9c9c9'/%3E%3Cstop offset='0.31' stop-color='%23dbdbdb'/%3E%3Cstop offset='0.44' stop-color='%23e8e8e8'/%3E%3Cstop offset='0.59' stop-color='%23f2f2f2'/%3E%3Cstop offset='0.75' stop-color='%23fafafa'/%3E%3Cstop offset='1' stop-color='%23FFFFFF'/%3E%3C/linearGradient%3E%3Cfilter id='c' x='0' y='0' width='200%25' height='200%25'%3E%3CfeGaussianBlur in='SourceGraphic' stdDeviation='12' /%3E%3C/filter%3E%3C/defs%3E%3Cpolygon fill='url(%23a)' points='0 174 0 0 174 0'/%3E%3Cpath fill='%23000' fill-opacity='.5' filter='url(%23c)' d='M121.8 174C59.2 153.1 0 174 0 174s63.5-73.8 87-94c24.4-20.9 87-80 87-80S107.9 104.4 121.8 174z'/%3E%3Cpath fill='url(%23b)' d='M142.7 142.7C59.2 142.7 0 174 0 174s42-66.3 74.9-99.3S174 0 174 0S142.7 62.6 142.7 142.7z'/%3E%3C/svg%3E");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: top left;
 }
 #about h3 {
 	font-size: 22px;
-	margin: 0 0 20px;
+	margin: 0 0 15px;
 }
 #about h2 {
 	position: relative;
 	margin-bottom: 15px;
-	padding-bottom: 15px;
+	padding-bottom: 10px;
+	padding-top: 20px;
 }
 #about h2::after {
 	position: absolute;
@@ -301,12 +301,15 @@ header .intro-text {
 	left: 0;
 }
 #about .about-text li {
-	margin-bottom: 6px;
+	margin-bottom: 10px;
 	margin-left: 6px;
 	list-style: none;
 	padding: 0;
 	text-align: justify;
 
+}
+.col-xs-12.col-md-6{
+	padding: 10px;
 }
 #about .about-text li:before {
 	content: '\f00c';
@@ -318,7 +321,7 @@ header .intro-text {
 }
 #about img {
 	width: 520px;
-	margin-top: 10px;
+	margin-top: 20px;
 	background: #fff;
 	border-right: 0;
 	box-shadow: 0 0 50px rgba(0,0,0,0.06);
