--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,21 +200,31 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	outline: none;
 	outline-offset: none;
 }
+
+
 /* Header Section */
-.intro {
-	
-	width: 100%;
-	padding: 0;
-	background: url(../img/intro-bg.jpg) center center no-repeat;
-	background-color: #e5e5e5;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	background-size: cover;
-	-o-background-size: cover;
-}
-.intro .overlay {
-	background: rgba(0,0,0,0.2);
-}
+						/* .intro {
+							
+							/* width: 100%; */
+							/* padding: 0; */
+							/* background: url(../img/intro-bg.jpg) center center no-repeat; */
+							/* background-color: #fff; */
+							/* -webkit-background-size: cover;
+							-moz-background-size: cover;
+							background-size: cover;
+							-o-background-size: cover; */
+						/* } */ */
+/* .overlay {
+	background: "#fff";
+	/* text-align: center; */
+	/* margin: 0 auto; */
+	/* padding-top: 150px; */
+/* } */ */
+/* .image{
+	height: auto;
+	width: 1000px;
+} */
+
 .intro h1 {
 	font-family: 'Raleway', sans-serif;
 	color: #fff;
@@ -235,10 +245,24 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	margin: 0 auto;
 	margin-bottom: 20px;
 }
-header .intro-text {
-	padding-top: 350px;
-	padding-bottom: 200px;
+.intro-text {
+	padding-top: 320px;
+	padding-bottom: 320px;
 	text-align: center;
+}
+
+	.intro-text h2::before  {
+		position: absolute;
+		content: "";
+		background: linear-gradient(to right, #44849c 0%, #8ca945 100%);
+		height: 6px;
+		width: 120px;
+		left: 16.9%;
+	}
+
+
+img{
+	width: 100%;
 }
 /* Features Section */
 #features {
@@ -259,6 +283,10 @@ header .intro-text {
 }
 
 .button {
+	background: #1E7A46;
+}
+
+.button {
 	background-color: #904caf; /* Green */
 	border: none;
 	color: white;
@@ -273,6 +301,8 @@ header .intro-text {
   {
 	  background-color: blue;
   }
+
+
 /* About Section */
 #about {
 	background-color: #ffffff;
@@ -280,16 +310,22 @@ header .intro-text {
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: top left;
+	padding: 100px 0;
 }
 #about h3 {
 	font-size: 22px;
 	margin: 0 0 15px;
+	margin-left: 70px;
+}
+.aboutUs{
+	margin-left: 70px;
 }
 #about h2 {
 	position: relative;
 	margin-bottom: 15px;
 	padding-bottom: 10px;
 	padding-top: 20px;
+	margin-left: 70px;
 }
 #about h2::after {
 	position: absolute;
@@ -327,10 +363,27 @@ header .intro-text {
 	box-shadow: 0 0 50px rgba(0,0,0,0.06);
 }
 #about p {
-	line-height: 24px;
-	margin: 30px 0;
+	line-height: 22px;
+	margin: 20px 0;
 	text-align: justify;
+	margin-left: 70px;
+	width: 100%;
 }
+/* ------------------------------------------Partners */
+#partners {
+	padding: 100px 0;
+   	background: url(../office/08.jpg) center center no-repeat;
+
+}
+.line {
+	position: relative;
+	content: "";
+	background: #000;
+	height: 5px;
+	width: 90px;
+}
+
+
 /* Services Section */
 #services {
 	padding: 100px 0;
@@ -379,6 +432,12 @@ header .intro-text {
 {
 	width: 100%;
 }
+/* #services p{
+	visibility: hidden;
+}
+#services h3:hover{
+	visibility: visible;
+} */
 
 /* Industries Section */
 #industries {
@@ -565,9 +624,9 @@ header .intro-text {
 	/* padding-bottom: 20px; */
 	font-weight: 400;
 }
-#contact form {
+/* #contact form {
 	/* padding-top: 20px; */
-}
+/* } */ */
 
 .pInContactInfo {
 	margin-left: 20px;
@@ -696,5 +755,77 @@ color: #777;
 @media (max-width: 1100px) {
 #about img {
 	margin: 50px 0;
+	}
 }
+
+/* -------------------------------------- slider */
+.slider{
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding-top: 120px;
+	padding-bottom: 120px;
 }
+.image{
+	width: 1000px;
+	height: 650px;
+	border-radius: 10px;
+}
+.right-arrow{
+	position: absolute;
+	top:50%;
+	right: 32px;
+	font-size: 3.3rem;
+	color: black;
+	z-index: 10;
+	cursor: pointer;
+	user-select: none;
+}
+
+.left-arrow{
+	z-index: 10;
+	cursor: pointer;
+	user-select: none;
+	position: absolute;
+	top:50%;
+	left: 32px;
+	font-size: 3.3rem;
+	color: black;
+}
+
+.slide-off {
+	opacity: 0;
+	transition-duration: 1s ease;
+}
+
+.slide-active {
+	opacity: 1;
+	transition-duration: 1s;
+	transform: scale(1.04);
+}
+
+.container-dots {
+	position: absolute;
+	bottom: 5%;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+  }
+  .dot {
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	border: 3px solid #f1f1f1;
+	margin: 0 5px;
+	background: #f1f1f1;
+  }
+
+  .dot-active {
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	border: 3px solid rgb(140, 169, 69);
+	margin: 0 5px;
+	background: rgb(140, 169, 69);
+  }
